--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="index.css" />
 
-    <!-- Bootrstarp CSS -->
+    <!-- Bootrstarp CSS CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +25,104 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
   <body>
+    <div class="add_new_mobile_btn">
+      <button
+        class="btn btn-primary d-flex gap-2 align-items-center"
+        type="button"
+        data-bs-toggle="modal"
+        data-bs-target="#addNewModal"
+      >
+        <i class="fa-solid fa-plus"></i>Add New Item
+      </button>
+    </div>
+
+    <!-- Add New Item Modal -->
+    <div
+      class="modal fade"
+      id="addNewModal"
+      tabindex="-1"
+      aria-labelledby="addNewModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="addNewModalLabel">Add New Task</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="imageUrl" class="form-label">Image URL</label>
+                <input
+                  type="url"
+                  class="form-control"
+                  id="imageUrl"
+                  aria-describedby="imageHelp"
+                  placeholder="https://rohan.kinnal/profile.jpg"
+                />
+                <div id="imageHelp" class="form-text">
+                  Its a optional filed here :-(
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label for="taskTitle" class="form-label">Task Title</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="taskTitle"
+                  placeholder="enter the task title"
+                />
+              </div>
+
+              <div class="mb-3">
+                <label for="tags" class="form-label">Task Type</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="tags"
+                  placeholder="enter the task type"
+                />
+              </div>
+
+              <div class="mb-3">
+                <label for="tags" class="form-label">Task Description</label>
+                <!-- <input
+                  type="text"
+                  class="form-control"
+                  id="tags"
+                  placeholder="enter the task type"
+                /> -->
+                <textarea
+                  id="tags"
+                  placeholder="enter the task decription"
+                  class="form-control"
+                ></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -51,6 +148,8 @@
           <button
             class="btn btn-primary d-flex gap-2 align-items-center"
             type="button"
+            data-bs-toggle="modal"
+            data-bs-target="#addNewModal"
           >
             <i class="fa-solid fa-plus"></i>Add New Item
           </button>
@@ -75,6 +174,12 @@
               ></span>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="mt-4">
+        <div class="row task__contents">
+          <h5>Dynamic Cards</h5>
         </div>
       </section>
     </div>
