done with project

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                 placeholder="Search your tasks here"
                 aria-label="Username"
                 aria-describedby="basic-addon1"
+                oninput="searchTask.apply(this, arguments)"
               />
               <span class="input-group-text" id="basic-addon1"
                 ><i class="fa-solid fa-magnifying-glass"></i
